--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
             face and rewards to your wallet.
           </p>
           <div>
-            <a href="" class="btn">Features</a>
-            <a href="#" class="btn-second btn">Join Community</a>
+            <a href="#ticker" class="btn">Features</a>
+            <a href="#community" class="btn-second btn">Join Community</a>
           </div>
         </div>
         <div class="hero-image">
@@ -497,7 +497,7 @@
       </div>
     </section>
 
-    <section class="community">
+    <section id="community" class="community">
       <div class="container">
         <div class="community-content">
           <div class="community-text">
@@ -521,7 +521,7 @@
                   />
                 </svg>
               </a>
-              <a href="https://t.me/basedchipster" aria-label="Telegram">
+              <a href="#" aria-label="Telegram">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
