changed name to BLUPPO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chipster - A fun and lighthearted memecoin</title>
+    <title>BLUPPO - A fun and lighthearted memecoin</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
 
@@ -464,7 +464,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-content">
-          <h1>Welcome to Chipster</h1>
+          <h1>Welcome to BLUPPO</h1>
           <p>
             A fun and lighthearted memecoin designed to bring a smile to your
             face and rewards to your wallet.
@@ -475,9 +475,9 @@
           </div>
         </div>
         <div class="hero-image">
-          <img src="Photo1.jpeg" alt="Chipster Character" />
-          <img src="Photo2.jpeg" alt="Chipster Character" />
-          <img src="Photo3.jpeg" alt="Chipster Character" />
+          <img src="Photo1.jpeg" alt="BLUPPO Character" />
+          <img src="Photo2.jpeg" alt="BLUPPO Character" />
+          <img src="Photo3.jpeg" alt="BLUPPO Character" />
         </div>
       </div>
     </section>
@@ -488,22 +488,22 @@
         <div class="ticker-content">
           <h2>Community Driven</h2>
           <p>
-            Chipster is not just a memecoin, it's a fun and vibrant community!
+            BLUPPO is not just a memecoin, it's a fun and vibrant community!
           </p>
         </div>
         <div class="ticker-image">
-          <img src="Photo6.jpeg" alt="Chipster at Olympics" />
+          <img src="Photo6.jpeg" alt="BLUPPO at Olympics" />
         </div>
       </div>
       <div class="ticker-item">
         <div class="ticker-content">
           <h2>1 Billion Supply</h2>
           <p>
-            The total supply of Chipster (CHIP) is capped at 1 billion tokens.
+            The total supply of BLUPPO (BLUP) is capped at 1 billion tokens.
           </p>
         </div>
         <div class="ticker-image">
-          <img src="Photo5.jpeg" alt="Chipster Playing Sports" />
+          <img src="Photo5.jpeg" alt="BLUPPO Playing Sports" />
         </div>
       </div>
       <div class="ticker-item">
@@ -514,16 +514,16 @@
           </p>
         </div>
         <div class="ticker-image">
-          <img src="Photo7.jpeg" alt="Chipster Working" />
+          <img src="Photo7.jpeg" alt="BLUPPO Working" />
         </div>
       </div>
       <div class="ticker-item">
         <div class="ticker-content">
           <h2>Cosmic Creativity</h2>
-          <p>Unleash your creativity and be part of the Chipster story!</p>
+          <p>Unleash your creativity and be part of the BLUPPO story!</p>
         </div>
         <div class="ticker-image">
-          <img src="Photo8.jpeg" alt="Chipster Playing Guitar" />
+          <img src="Photo8.jpeg" alt="BLUPPO Playing Guitar" />
         </div>
       </div>
     </section>
@@ -532,10 +532,10 @@
       <div class="container">
         <div class="community-content">
           <div class="community-text">
-            <h2>Join the Chipster Community</h2>
+            <h2>Join the BLUPPO Community</h2>
             <p>
               Be part of a vibrant community that thrives on creativity, fun,
-              and shared success. Connect with fellow Chipster enthusiasts and
+              and shared success. Connect with fellow BLUPPO enthusiasts and
               stay updated on the latest developments.
             </p>
             <div class="social-icons">
@@ -571,7 +571,7 @@
             </div>
           </div>
           <div class="community-image">
-            <img src="Photo5.jpeg" alt="Chipster Community" />
+            <img src="Photo5.jpeg" alt="BLUPPO Community" />
           </div>
         </div>
       </div>
