--- a/index.html
+++ b/index.html
@@ -386,6 +386,18 @@
         background-color: #0f8ad7;
         transform: translateY(-3px);
       }
+      .contract-address {
+        background-color: #fff;
+        border-radius: 2rem;
+        padding: 1rem;
+        color: #0f8ad7;
+        font-weight: 900;
+        font-size: 1.3rem;
+        display: flex;
+        flex-direction: column;
+
+        text-align: center;
+      }
 
       @media (max-width: 768px) {
         .hero,
@@ -519,6 +531,13 @@
         .bottom-ticker-content img {
           width: 100px;
         }
+
+        .contract-address {
+          font-size: 1.2rem;
+          font-weight: 600;
+          width: 110%;
+          word-wrap: break-word;
+        }
       }
       .logo-a {
         background-color: #fff;
@@ -592,6 +611,10 @@
 
     <section id="community" class="community">
       <div class="container">
+        <div class="contract-address">
+          <p>Contract Address :</p>
+          <p>coming soon</p>
+        </div>
         <div class="community-content">
           <div class="community-text">
             <h2>Join the BLUPPO Community</h2>
@@ -633,7 +656,7 @@
             </div>
           </div>
           <div class="community-image">
-            <img src="Photo5.jpeg" alt="BLUPPO Community" />
+            <img src="GIF.gif" alt="BLUPPO Community" />
           </div>
         </div>
       </div>
